--- a/DailyTraining-SwiftUI/DailyTraining-SwiftUI.xcodeproj/xcshareddata/xcschemes/DailyTraining-SwiftUI.xcscheme
+++ b/DailyTraining-SwiftUI/DailyTraining-SwiftUI.xcodeproj/xcshareddata/xcschemes/DailyTraining-SwiftUI.xcscheme
@@ -73,6 +73,13 @@
             ReferencedContainer = "container:DailyTraining-SwiftUI.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
