--- a/DailyTraining-SwiftUI/DailyTraining-SwiftUI.xcodeproj/xcshareddata/xcschemes/DailyTraining-SwiftUI.xcscheme
+++ b/DailyTraining-SwiftUI/DailyTraining-SwiftUI.xcodeproj/xcshareddata/xcschemes/DailyTraining-SwiftUI.xcscheme
@@ -57,6 +57,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = "ar"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
